[project]
name = "transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "torch",
    "transformers",
    "datasets",
    "accelerate",
    "tqdm",
    "fastapi>=0.133.0",
    "v>=1",
    "uvicorn[standard]>=0.41.0",
    "pytest>=9.0.2",
]
